compiler/tests/ar/errors/pure_ref_param_ar.salam
// لغة: العربية
// EXPECT: E012
نقي دالة زد(x &: صحيح) : صحيح:
    أرجع x + 1
نهاية

دالة الرئيسية:
    اطبع(1)
نهاية
